<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_1">
    <fragment
        android:id="@+id/nav_1"
        android:name="com.home.fragments.HomeFragment"
        android:label="@string/nav_item_1"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_1_to_nav_3"
            app:destination="@id/nav_3"
            app:enterAnim="@anim/silde_in_left"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/silde_in_right"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/nav_2"
        android:name="com.home.fragments.CameraFragment"
        android:label="@string/nav_item_2"
        tools:layout="@layout/fragment_camera" >
        <action
            android:id="@+id/action_nav_2_to_nav_1"
            app:destination="@id/nav_1"
            app:enterAnim="@anim/silde_in_left"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/silde_in_right"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/nav_3"
        android:name="com.home.fragments.UserFragment"
        android:label="@string/nav_item_3"
        tools:layout="@layout/fragment_user" />
</navigation>