<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.UserFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/bg_grey"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_icon_fore"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/user_blankH"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_box_height"
            android:layout_marginTop="@dimen/user_blankH"
            android:layout_marginHorizontal="@dimen/user_blankW"
            android:background="@drawable/bg_user_box">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_phone"
                android:layout_marginHorizontal="@dimen/blankH_0"
                android:layout_gravity="center"
            />
            <EditText
                android:id="@+id/text_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/transparency"
                android:foregroundTint="@color/transparency"
                android:hint="@string/login_phone_hint"
                android:textColorHint="@color/grey_1"
                android:textSize="@dimen/hint_text"
                android:textCursorDrawable="@null"
                android:inputType="number"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_box_height"
            android:layout_marginHorizontal="@dimen/user_blankW"
            android:background="@drawable/bg_user_box"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/blankH_0"
                android:src="@drawable/ic_lock"
                android:layout_gravity="center"
                />
            <EditText
                android:id="@+id/text_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:backgroundTint="@color/transparency"
                android:foregroundTint="@color/transparency"
                android:hint="@string/login_pwd_hint"
                android:textColorHint="@color/grey_1"
                android:textSize="@dimen/hint_text"
                android:textCursorDrawable="@null"
                android:inputType="textPassword"
                />
            <Switch
                android:id="@+id/sw_pwd"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/user_box_height"
                android:layout_marginHorizontal="10dp"
                android:thumb="@drawable/thumb_pwd"
                android:track="@drawable/bg_sw_track"
                />
        </LinearLayout>
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="@dimen/user_box_height"-->
<!--            android:layout_marginHorizontal="@dimen/user_blankW"-->
<!--            android:background="@drawable/bg_user_box"-->
<!--            android:orientation="horizontal">-->
<!--            <ImageView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginHorizontal="@dimen/blankH_0"-->
<!--                android:src="@drawable/ic_lock"-->
<!--                android:layout_gravity="center"-->
<!--                />-->
<!--            <EditText-->
<!--                android:id="@+id/text_password"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:backgroundTint="@color/transparency"-->
<!--                android:foregroundTint="@color/transparency"-->
<!--                android:hint="@string/login_pwd_hint"-->
<!--                android:textColorHint="@color/grey_1"-->
<!--                android:textSize="@dimen/hint_text"-->
<!--                android:textCursorDrawable="@null"-->
<!--                android:inputType="textPassword"-->
<!--                />-->
<!--            <Switch-->
<!--                android:id="@+id/sw_pwd"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="@dimen/user_box_height"-->
<!--                android:layout_marginHorizontal="10dp"-->
<!--                android:thumb="@drawable/thumb_pwd"-->
<!--                android:track="@drawable/bg_sw_track"-->
<!--                />-->
<!--        </LinearLayout>-->
        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_blankH"
            android:background="@drawable/bg_btn"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textSize="@dimen/user_item_text"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/blankH"
            android:layout_marginTop="@dimen/user_blankH"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/text_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register"
                android:textColor="@color/blue"
                android:textSize="@dimen/hint_text"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/text_find_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/find_pwd"
                android:textColor="@color/blue"
                android:textSize="@dimen/hint_text"
                android:gravity="center"
                />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|bottom"
            >
            <TextView
                android:id="@+id/text_copyright_notice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/text_copyright"
                android:layout_marginBottom="@dimen/blankH_0"
                android:layout_marginLeft="80dp"
                android:text="@string/cr_notice"
                android:textColor="@color/grey_1"
                android:textSize="@dimen/hint_text"

                />

            <TextView
                android:id="@+id/text_copyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/blankH_0"
                android:text="@string/copyright"
                android:textColor="@color/grey_1"
                android:textSize="@dimen/hint_text" />
        </RelativeLayout>

    </LinearLayout>
    <!-- TODO: Update blank fragment layout -->


</FrameLayout>