<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="@dimen/user_work_h"
    android:layout_marginVertical="@dimen/blankH"
    >
    <ImageView
        android:id="@+id/lv_item_img1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:layout_marginHorizontal="@dimen/blankH"
        android:src="@drawable/work_null"/>
    <RelativeLayout
        android:id="@+id/rl_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">
        <TextView
            android:id="@+id/text_redraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/redraw_factor"
            android:textColor="@color/theme_red"
            />

        <TextView
            android:id="@+id/text_seed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_redraw"
            android:layout_marginTop="@dimen/blankH_0"
            android:text="@string/seed"
            android:textColor="@color/theme_red"
            />
        <TextView
            android:id="@+id/des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seed"
            android:layout_marginTop="@dimen/blankH_0"
            android:layout_marginLeft="@dimen/blankH1_1"
            android:text="@string/des"
            android:textColor="@color/theme_red"
            tools:ignore="NotSibling"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/redraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/rl_info"
            android:layout_marginLeft="@dimen/blankH1_1"
            android:text="@string/redraw_factor"
            android:textColor="@color/theme_red"
            tools:ignore="NotSibling" />

        <TextView
            android:id="@+id/seed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/redraw"
            android:layout_marginLeft="@dimen/blankH1_1"
            android:layout_marginTop="@dimen/blankH_0"
            android:text="@string/seed"
            android:textColor="@color/theme_red"
            />
        <TextView
            android:id="@+id/text_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_seed"
            android:layout_marginTop="@dimen/blankH_0"
            android:text="@string/des"
            android:textColor="@color/theme_red"
            />
    </RelativeLayout>
</LinearLayout>