<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FindPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/bg_grey"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_icon_fore"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/user_blankH"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_box_height"
            android:layout_marginTop="@dimen/user_blankH"
            android:layout_marginHorizontal="@dimen/user_blankW"
            android:background="@drawable/bg_user_box"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/blankH_0"
                android:src="@drawable/ic_phone"
                android:layout_gravity="center"
                />
            <EditText
                android:id="@+id/text_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:backgroundTint="@color/transparency"
                android:foregroundTint="@color/transparency"
                android:hint="@string/login_phone_hint"
                android:textColorHint="@color/grey_1"
                android:textSize="@dimen/hint_text"
                android:textCursorDrawable="@null"
                android:inputType="number"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_box_height"
            android:layout_marginHorizontal="@dimen/user_blankW"
            android:background="@drawable/bg_user_box"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/blankH_0"
                android:src="@drawable/ic_lock"
                android:layout_gravity="center"
                />
            <EditText
                android:id="@+id/text_password0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:backgroundTint="@color/transparency"
                android:foregroundTint="@color/transparency"
                android:hint="@string/find_pwd_hint"
                android:textColorHint="@color/grey_1"
                android:textSize="@dimen/hint_text"
                android:textCursorDrawable="@null"
                android:inputType="textPassword"
                />
            <Switch
                android:id="@+id/sw_pwd0"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/user_box_height"
                android:layout_marginHorizontal="10dp"
                android:thumb="@drawable/thumb_pwd"
                android:track="@drawable/bg_sw_track"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_box_height"
            android:layout_marginHorizontal="@dimen/user_blankW"
            android:background="@drawable/bg_user_box"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/blankH_0"
                android:src="@drawable/ic_lock"
                android:layout_gravity="center"
                />
            <EditText
                android:id="@+id/text_password1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:backgroundTint="@color/transparency"
                android:foregroundTint="@color/transparency"
                android:hint="@string/login_pwd_hint1"
                android:textColorHint="@color/grey_1"
                android:textSize="@dimen/hint_text"
                android:textCursorDrawable="@null"
                android:inputType="textPassword"
                />
            <Switch
                android:id="@+id/sw_pwd1"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/user_box_height"
                android:layout_marginHorizontal="10dp"
                android:thumb="@drawable/thumb_pwd"
                android:track="@drawable/bg_sw_track"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/text_register_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_blankH"
            android:textSize="@dimen/hint_text"
            android:textColor="@color/theme_red"
            android:layout_gravity="center"
            />
        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_blankH"
            android:background="@drawable/bg_btn"
            android:layout_gravity="center"
            android:text="@string/update_pwd"
            android:textSize="@dimen/user_item_text"
            />
    </LinearLayout>


</FrameLayout>